Fix issue with page wrap on worklogs
Sometimes the pages were not wrapping around properly.

--- a/app/assets/stylesheets/global.css.sass
+++ b/app/assets/stylesheets/global.css.sass
@@ -126,7 +126,6 @@ table.table, .markdown-table-cell
 textarea.form-control
   max-width: 100%
 
-div.page
-  height: 277mm
+.page
   overflow: hidden
   page-break-after: always
